[project]
name = "text-game"
version = "1"
description = "A basic text game written with curses"
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "windows-curses; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "yapf",
    "toml"
]